--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TIME CAPSULE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <H1>TIME CAPSULE</H1>
-    
+    <input id="photo" type="file" accept="photo">
+    <input id="email" type="email" placeholder="Write your email">
 </body>
 </html>
