Now it can input picture and diplay it

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <title>TIME CAPSULE</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <H1>TIME CAPSULE</H1>
-    <input id="photo" type="file" accept="photo">
+    <input id="photo" type="file" accept="image/*">
+    <img id="pic" alt="This is your time capsule picture">
+    <input id="text" type="text" placeholder="Write a small caption" >
     <input id="email" type="email" placeholder="Write your email">
+    <button id="button">SUBMIT</button>
+    <script src="script.js"></script>
 </body>
 </html>
