--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 
 <body>
+    <div id="tsparticles"></div>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.0.6/tsparticles.slim.bundle.min.js"></script>
+    <!-- https://www.jsdelivr.com/package/npm/tsparticles -->
+    <!-- The bundle file contains all the necessary scripts for the full version, instead of manually including them all -->
+        
     <H1 id="title">TIME CAPSULE</H1>
     <input id="photo" type="file" accept="image/*">
     <input id="text" type="text" placeholder="Write a small caption" >
     <input id="email" type="email" placeholder="Write your email" required>
     <button id="button">SUBMIT</button>
-    <div class="container">
-    <input id="date" type="datetime-local">
-    <img id="pic" alt="This is your time capsule picture">
-    </div>
+    <div id="container"><img id="pic">
+    <input id="date" type="datetime-local"></div> 
     <script src="script.js"></script>
 </body>
 </html>
