I positioned the caption and date such that only the image itslef and the email needs to be stored not everything

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         
     <H1 id="title">TIME CAPSULE</H1>
     <input id="photo" type="file" accept="image/*">
-    <input id="text" type="text" placeholder="Write a small caption" >
     <input id="email" type="email" placeholder="Write your email" required>
     <button id="button">SUBMIT</button>
     <div id="container"><img id="pic">
+    <input id="caption" type="text" placeholder="Write a small caption" >
     <input id="date" type="datetime-local"></div> 
     <script src="script.js"></script>
 </body>
