designed the caption

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input id="email" type="email" placeholder="Write your email" required>
     <button id="button">SUBMIT</button>
     <div id="container"><img id="pic">
-    <input id="caption" type="text" placeholder="Write a small caption" >
+    <textarea id="caption" type="text" placeholder="Write a small caption" ></textarea>
     <input id="date" type="datetime-local"></div> 
     <script src="script.js"></script>
 </body>
