made files for backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TIME CAPSULE</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -20,6 +21,9 @@
     <div id="container"><img id="pic">
     <textarea id="caption" type="text" placeholder="Write a small caption" ></textarea>
     <input id="date" type="datetime-local"></div> 
+    <div id="msg"></div>
     <script src="script.js"></script>
+    
+    
 </body>
 </html>
