added sound effect

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>TIME CAPSULE</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link 
 </head>
 
 <body>
@@ -15,6 +16,7 @@
     <!-- The bundle file contains all the necessary scripts for the full version, instead of manually including them all -->
         
     <H1 id="title">TIME CAPSULE</H1>
+    <audio id="sound" src="sound.wav"></audio>
     <input id="photo" type="file" accept="image/*">
     <input id="email" type="email" placeholder="Write your email" required>
     <button id="button">SUBMIT</button>
